--- a/etc/break-19.com.conf
+++ b/etc/break-19.com.conf
@@ -35,6 +35,26 @@ server {
     client_max_body_size 10M;
 }
 
+server {
+		server_name	tags.break-19.com;
+    index      	index.html;
+    root       	/home/ubuntu/www/break-19.com/break-19-tags/dist;
+
+		add_header 'Cache-Control' 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+    add_header 'Last-Modified' '';
+		if_modified_since off;
+    #expires -1;
+		etag off;
+
+    listen [::]:443; # managed by Certbot
+    listen 443; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/tags.break-19.com/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/tags.break-19.com/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
+    client_max_body_size 10M;
+}
 
 server {
     listen [::]:80;
