--- a/.env
+++ b/.env
@@ -8,4 +8,4 @@ VITE_DEFAULT_FOLLOWS=97c70a44366a6535c145b333f973ea86dfdc2d7a99da618c40c64705ad9
 VITE_ENABLE_ZAPS=true
 #VITE_FORCE_RELAYS=wss://relay.break-19.com,wss://relay.mostr.pub,wss://relay.snort.social,wss://purplepag.es,wss://relay.snort.social
 VITE_LOGO_URL=
-VITE_APP_NAME=Break-19
+VITE_APP_NAME=break-19
