--- a/etc/break-19.com.conf
+++ b/etc/break-19.com.conf
@@ -36,9 +36,16 @@ server {
 }
 
 server {
+    listen [::]:80;
+    listen      80;
+    server_name	tags.break-19.com;
+    return      301 https://tags.break-19.com$request_uri;
+}
+
+server {
 		server_name	tags.break-19.com;
     index      	index.html;
-    root       	/home/ubuntu/www/break-19.com/break-19-tags/dist;
+    root       	/home/ubuntu/www/break-19.com/break-19-tags/dist/zapddit;
 
 		add_header 'Cache-Control' 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
     add_header 'Last-Modified' '';
