--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "check": "run-p check:*",
     "format": "prettier --write $(git diff head --name-only --diff-filter d | grep -E 'js|ts|svelte$' | xargs)",
     "watch": "find src -type f | entr -r",
-    "deploy": "./bin/deploy.sh"
+    "deploy": "npm run build && ./bin/deploy.sh"
   },
   "devDependencies": {
     "@capacitor/cli": "^4.7.3",
